8 February 2005 Laurent Rineau
- CHANGES to Mesher_level:
    - enum Mesher_level_conflict_status instead of std::map<bool, bool>.
    - new template parameters for Mesher_level
    - new Mesher_level function names:
        - Tr& triangulation_ref_impl()
        - Vertex_handle insert_impl(p, z)
        - Zone conflicts_zone_impl(p)
        - void scan_triangulation_impl()
        - bool no_longer_element_to_refine_impl()
        - Element get_next_element_impl()
        - void pop_next_element_impl()
        - Point refinement_point_impl(e)
        - void before_conflicts_impl(e, p)
        - Mesher_level_conflict_status private_test_point_conflict_impl(p, zone)
        - Mesher_level_conflict_status 
            test_point_conflict_from_superior_impl(p, zone)
        - void before_insertion_impl(e, p, zone)
        - void after_insertion_impl(vh)
        - void after_no_insertion_impl(e, p, zone)
    - new class in Mesher_level.h for default implementations:
        - class Triangulation_ref_impl
        - No_private_test_point_conflict
        - No_test_point_conflict_from_superior
        - No_test_point_conflict :
        - No_before_insertion
        - No_after_insertion
        - No_after_no_insertion
        - No_before_after_insertion
    
18 January 2005 Laurent Rineau
- new Qt_widget_style_editor implementation
- demoicon.xpm in the demo
- remove some cerr outputs

11 December 2004 Laurent Rineau
- new dialog in mesh_demo, to set up layer properties
- fix documentation
- NEW: pictures in the documentation

17 November 2004 Laurent Rineau
- fix for g++-3.4
- fix Delaunay_mesh_area_2 which was broken
- fix warnings in demo/Mesh_2/ layers

16 November 2004 Laurent Rineau
- fix documentation
- enum Face_badness { NOT_BAD, BAD, IMPERATIVELY_BAD }; and modified
specifications for MeshingCriteria_2, to refines too small faces near
clusters.

22 October 2004 Laurent Rineau
- fix two typo bugs in the testsuite

21 October 2004 Laurent Rineau